在yhx01分支上添加div

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>刮刮乐</title>
 	<style>
 		html,body{
@@ -12,7 +13,7 @@
 		}
 		#cas{
 			border: 1px solid #000;
-			background: url(image/4.jpg) center 0 no-repeat;
+			background: url(image/10.jpg) center 0 no-repeat;
 			background-size: cover;
 		}
 		#canvas{
@@ -29,9 +30,10 @@
 </head>
 <body>
 	<canvas id="cas" width="375" height="667"></canvas>
-	<!-- <div id="canvas">
-		这是我曾血拼打下的江山，曾经追她穷如狗，现在看她嫌她丑，扔之可惜，牵之傻逼!!!
-	</div> -->
+
+	<div id="canvas">
+		这是我曾血拼打下的江山，曾经追她穷如狗，现在看她嫌她丑，扔之可惜，牵之傻逼!!!在yhx01分支上的修改！
+	</div>
 </body>
 </html>
 <script src="js/wipe.js" type="text/javascript"></script>
