--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,7 @@
 </head>
 <body>
 	<canvas id="cas" width="375" height="667"></canvas>
-	<!-- <div id="canvas">
-		这是我曾血拼打下的江山，曾经追她穷如狗，现在看她嫌她丑，扔之可惜，牵之傻逼!!!
-	</div> -->
+	<span>在主分支上的修改</span>
 </body>
 </html>
 <script src="js/wipe.js" type="text/javascript"></script>
