--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@ var wipeConfig={
 	width:"375", //canvas宽
 	height:"667", //canvas高
 	radius:"20", //涂抹笔的半径
-	transpercent:50,
+	transpercent:50,//透明面积占整个画布的百分比，超出此数字显示全部画布
 	callback:wipedCallback	//用户自定回调函数的名称
 }
 var cas01 = new Wipe(wipeConfig);
